<resources>
    <string name="app_name">The Serve</string>
    <string name="UserFullName">Name</string>
    <string name="UserPhone">Phoneno</string>
    <string name="UserEmail">Emalid</string>
    <string name="UserPassword">Password</string>
    <string name="Registration">Register</string>
    <string name="UserLogin">Login</string>
    <string name="PasswordReset">Rest Passoword</string>
    <string name="Exit">Logout</string>
    <string name="UserAccount">AccountInformation</string>
    <string name="account">Account</string>
    <string name="order">Order</string>
    <string name="logout">Logout</string>
    <string name="contact_form">Contact Us</string>
    <string name="contact_form_name">Your Name</string>
    <string name="contact_form_email">Your Email</string>
    <string name="contact_form_subject">Subject</string>
    <string name="contact_form_message">Message</string>
    <string name="contact_form_button">Send Message</string>
    <string name="contact_form_post_message">Please wait! We\'re sending your message to the support department...</string>
    <string name="contact_posted">Your message has been successfully delivered.</string>
    <string name="title_activity_maps">Map</string>
</resources>